# python-dgidb

./: .gitignore  README.md  dgidb.py  pyproject.toml
api/: graphql.py  v2.py
dgidb/: dgidb-v5-genes.csv  dgidb.py  graph_app.py  network_graph.py
tests/: test_dgidb.py  test_graph_app.py
